--- a/1.ipynb
+++ b/1.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     "2. 构建数据集\n",
-    "- 将数据集放到dataset下，dataset目录如下：\n",
+    "- 将数据集放到dataset目录下，dataset目录如下：\n",
     "\n",
     "    ```\n",
     "    dataset\n",
@@ -76,7 +76,7 @@
    "source": [
     "1. 语音特征提取(`data.dataloader.extract_audio_features`函数)\n",
     "\n",
-    "    -  可以把上一节课完成的特征提取给放进去\n",
+    "    -  可以把实验一完成的特征提取给放进去\n",
     "    -  要保证返回的结果为一个tensor，并且维度为(L,f)\n",
     "\n",
     "2. 文本处理\n",
