--- a/1.ipynb
+++ b/1.ipynb
@@ -153,7 +153,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unk:  ['A']\n",
       "['wo', 'men', 'cheng']\n"
      ]
     }
@@ -172,7 +171,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def pre_emphasis(x: np.ndarray, alpha: float = 0.97) -> np.ndarray:\n",
+    "    return np.append(x[0], x[1:] - alpha * x[:-1])\n",
+    "\n",
+    "def framing(x: np.ndarray, sr: int, frame_lenth: float = 0.025, frame_gap: float = 0.010) -> np.ndarray:\n",
+    "    frame_len, frame_step = int(round(frame_lenth * sr)), int(round(frame_gap * sr))\n",
+    "    signal_len = len(x)\n",
+    "\n",
+    "    if signal_len <= frame_len:\n",
+    "        num_frames = 1\n",
+    "    else:\n",
+    "        num_frames = 1 + int(np.ceil((signal_len - frame_len) / frame_step))\n",
+    "\n",
+    "    pad_signal_length = (num_frames - 1) * frame_step + frame_len\n",
+    "    amount_to_pad = pad_signal_length - signal_len\n",
+    "    \n",
+    "    pad_signal = np.pad(x, (0, max(0, amount_to_pad)), mode='constant', constant_values=0)\n",
+    "    \n",
+    "    frame_indices_offset = np.arange(frame_len)\n",
+    "    frame_start_points = np.arange(num_frames) * frame_step\n",
+    "    \n",
+    "    indices = frame_start_points[:, np.newaxis] + frame_indices_offset[np.newaxis, :]\n",
+    "    \n",
+    "    frames = pad_signal[indices.astype(np.int32, copy=False)]\n",
+    "    return frames\n",
+    "\n",
+    "def add_window(frame_sig: np.ndarray, sr: int, frame_len_s: float = 0.025) -> np.ndarray:\n",
+    "    window = np.hamming(int(round(frame_len_s * sr)))\n",
+    "    return frame_sig * window\n",
+    "\n",
+    "def stft(frame_sig: np.ndarray, nfft: int = 512) -> tuple[np.ndarray, np.ndarray]:\n",
+    "    frame_spec = np.fft.rfft(frame_sig, n=nfft)\n",
+    "    frame_mag = np.abs(frame_spec)\n",
+    "    frame_pow = (frame_mag ** 2) / nfft\n",
+    "    return frame_mag, frame_pow\n",
+    "\n",
+    "def get_filter_banks(sr, n_filters=40, nfft=512):\n",
+    "    low_freq_mel = 0\n",
+    "    high_freq_mel = 2595 * np.log10(1 + (sr / 2) / 700)\n",
+    "    \n",
+    "    mel_points = np.linspace(low_freq_mel, high_freq_mel, n_filters + 2)\n",
+    "    hz_points = 700 * (10 ** (mel_points / 2595) - 1)\n",
+    "    bins = np.floor((nfft + 1) * hz_points / sr).astype(int)\n",
+    "    filter_banks = np.zeros((n_filters, nfft // 2 + 1))\n",
+    "    fft_freqs = np.arange(nfft // 2 + 1)\n",
+    "    \n",
+    "    for i in range(n_filters):\n",
+    "        left, center, right = bins[i:i+3]\n",
+    "\n",
+    "        left_mask = (left <= fft_freqs) & (fft_freqs < center)\n",
+    "        if center != left:\n",
+    "            filter_banks[i, left_mask] = (fft_freqs[left_mask] - left) / (center - left)\n",
+    "\n",
+    "        right_mask = (center <= fft_freqs) & (fft_freqs < right)\n",
+    "        if right != center:\n",
+    "            filter_banks[i, right_mask] = (right - fft_freqs[right_mask]) / (right - center)\n",
+    "    \n",
+    "    return filter_banks\n",
+    "\n",
+    "def get_fbank(frame_pow: np.ndarray, filter_banks: np.ndarray) -> np.ndarray:\n",
+    "    return np.dot(frame_pow, filter_banks.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +251,26 @@
     "import random\n",
     "import os\n",
     "from utils.utils import collate_with_PAD\n",
+    "import librosa\n",
     "\n",
     "def extract_audio_features(wav_file:str)->torch.Tensor:\n",
+    "\n",
+    "    def calc_fbank(x: np.ndarray, sr: int = 16000, n_filters: int = 40, nfft: int = 512) -> np.ndarray:\n",
+    "        x = pre_emphasis(x)\n",
+    "        frames = framing(x, sr)\n",
+    "        frames = add_window(frames, sr)\n",
+    "        frame_mag, frame_pow = stft(frames, nfft)\n",
+    "        filter_banks = get_filter_banks(sr, n_filters, nfft)\n",
+    "        fbank = get_fbank(frame_pow, filter_banks)\n",
+    "        return fbank\n",
+    "\n",
     "    if not isinstance(wav_file, str):\n",
     "        raise TypeError(f\"Expected string for wav_file\")\n",
     "\n",
-    "    # TODO\n",
-    "    # 提取音频特征,并转化成torch.Tensor\n",
-    "    random_number = random.randint(100, 1000)\n",
-    "    res = torch.randn(random_number, 80)\n",
+    "    y, sr = librosa.load(wav_file, sr=None)\n",
+    "    fbank = calc_fbank(y, sr=sr, n_filters=80, nfft=512)\n",
+    "\n",
+    "    res = torch.from_numpy(fbank).float()\n",
     "\n",
     "    if not isinstance(res, torch.Tensor):\n",
     "        raise TypeError(\"Return value must be torch.Tensor\")\n",
@@ -232,7 +312,7 @@
     "        id = list(self.wav2path.keys())[index]\n",
     "        path = self.wav2path[id]\n",
     "        text = self.wav2text[id]\n",
-    "        return id, extract_audio_features(id), text\n",
+    "        return id, extract_audio_features(path), text\n",
     "    \n",
     "\n",
     "def get_dataloader(wav_file, text_file, batch_size, tokenizer, shuffle=True):\n",
@@ -248,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,27 +364,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([846, 270, 731], dtype=torch.int32)\n",
-      "tensor([[-1.9291e-01, -8.0170e-02,  5.8445e-01,  ..., -5.9170e-01,\n",
-      "         -8.0922e-01, -4.3831e-01],\n",
-      "        [ 5.7072e-01, -5.5849e-01,  1.5525e-02,  ..., -5.1530e-01,\n",
-      "          2.5720e+00,  1.4080e+00],\n",
-      "        [ 9.6679e-01,  1.1044e+00,  4.1950e-01,  ...,  1.1179e+00,\n",
-      "          4.5566e-01, -5.5372e-01],\n",
+      "tensor([265, 285, 439], dtype=torch.int32)\n",
+      "tensor([[0.0000e+00, 5.4336e-10, 0.0000e+00,  ..., 8.3642e-09, 3.3812e-08,\n",
+      "         9.6364e-08],\n",
+      "        [0.0000e+00, 7.9692e-10, 0.0000e+00,  ..., 9.7250e-09, 1.6037e-08,\n",
+      "         4.6284e-08],\n",
+      "        [0.0000e+00, 1.0147e-09, 0.0000e+00,  ..., 8.5312e-09, 3.1178e-08,\n",
+      "         7.5750e-08],\n",
       "        ...,\n",
-      "        [-2.3685e-03,  1.6951e+00,  3.2000e-01,  ...,  2.7687e+00,\n",
-      "         -1.6895e+00, -1.7418e-01],\n",
-      "        [-7.4421e-01, -3.2440e-01, -1.3456e-02,  ..., -6.7055e-01,\n",
-      "         -7.0159e-01, -8.1147e-01],\n",
-      "        [ 1.5708e-01, -1.2388e+00,  1.5396e+00,  ..., -9.1777e-02,\n",
-      "          2.1803e-02, -6.8506e-01]])\n"
+      "        [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
+      "         0.0000e+00],\n",
+      "        [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
+      "         0.0000e+00],\n",
+      "        [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
+      "         0.0000e+00]])\n"
      ]
     }
    ],
@@ -316,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "speechassistant",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -365,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
