Conformer & rel pos encoding

--- a/3_v2.ipynb
+++ b/3_v2.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,22 +286,39 @@
        "      (linear): Linear(in_features=2304, out_features=256, bias=True)\n",
        "    )\n",
        "  )\n",
-       "  (positional_encoding): PositionalEncoding(\n",
+       "  (positional_encoding): RelPositionalEncoding(\n",
        "    (dropout): Dropout(p=0.1, inplace=False)\n",
        "  )\n",
-       "  (encoder): TransformerEncoder(\n",
+       "  (encoder): ConformerEncoder(\n",
        "    (layers): ModuleList(\n",
-       "      (0-2): 3 x TransformerEncoderLayer(\n",
-       "        (self_attn): MultiheadAttention(\n",
+       "      (0-2): 3 x ConformerBlock(\n",
+       "        (ff1_norm): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "        (ff1_linear1): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (ff1_activation): SiLU()\n",
+       "        (ff1_dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (ff1_linear2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (ff1_dropout2): Dropout(p=0.1, inplace=False)\n",
+       "        (attn): MultiheadAttention(\n",
        "          (out_proj): NonDynamicallyQuantizableLinear(in_features=256, out_features=256, bias=True)\n",
        "        )\n",
-       "        (linear1): Linear(in_features=256, out_features=2048, bias=True)\n",
-       "        (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        (linear2): Linear(in_features=2048, out_features=256, bias=True)\n",
-       "        (norm1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
-       "        (norm2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
-       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
-       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "        (attn_norm): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "        (conv): ConformerConvModule(\n",
+       "          (layer_norm): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "          (conv1): Conv1d(256, 512, kernel_size=(1,), stride=(1,))\n",
+       "          (glu): GLU(dim=1)\n",
+       "          (depthwise_conv): Conv1d(256, 256, kernel_size=(31,), stride=(1,), padding=(15,), groups=256)\n",
+       "          (batch_norm): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          (activation): SiLU()\n",
+       "          (conv2): Conv1d(256, 256, kernel_size=(1,), stride=(1,))\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (ff2_norm): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "        (ff2_linear1): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (ff2_activation): SiLU()\n",
+       "        (ff2_dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (ff2_linear2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (ff2_dropout2): Dropout(p=0.1, inplace=False)\n",
+       "        (final_norm): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
        "      )\n",
        "    )\n",
        "  )\n",
@@ -310,7 +327,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "评估中: 100%|██████████| 32/32 [00:03<00:00,  9.27it/s]\n"
+      "评估中: 100%|██████████| 32/32 [00:03<00:00,  9.55it/s]"
      ]
     },
     {
@@ -400,26 +417,33 @@
      "output_type": "stream",
      "text": [
       "评估结果:\n",
-      "替换(S): 1680, 删除(D): 81, 插入(I): 279, 参考长度(N): 19252\n",
-      "CER: 0.1060 (2040/19252)\n",
+      "替换(S): 800, 删除(D): 16, 插入(I): 130, 参考长度(N): 19252\n",
+      "CER: 0.0491 (946/19252)\n",
       "\n",
       "样本对比:\n",
       "参考: ['yi', 'ge', 'nan', 'ren', 'tui', 'ran', 'de', 'zuo', 'zai', 'pang', 'bian', 'mu', 'guang', 'dai', 'zhi']\n",
       "预测: ['yi', 'gen', 'nan', 'ren', 'tui', 'ran', 'de', 'zuo', 'zai', 'pang', 'bian', 'mu', 'guan', 'dai', 'zhi']\n",
       "\n",
       "参考: ['xi', 'huan', 'ba', 'li', 'ao', 'de', 'shu', 'cha', 'zai', 'niu', 'zai', 'ku', 'de', 'qian', 'mian']\n",
-      "预测: ['xi', 'huan', 'ba', 'li', 'de', 'shu', 'cha', 'zai', 'niu', 'zai', 'ku', 'de', 'qian', 'mian']\n",
+      "预测: ['xi', 'huan', 'ba', 'li', 'ao', 'de', 'shu', 'cha', 'zai', 'niu', 'zai', 'ku', 'de', 'qian', 'mian']\n",
       "\n",
       "参考: ['zha', 'yan', 'yi', 'kan', 'xiang', 'qi', 'de', 'shi', 'guang', 'zhou', 'de', 'qu', 'hao', 'ling', 'e', 'er', 'ling']\n",
-      "预测: ['zhan', 'yan', 'yi', 'kan', 'xiang', 'qi', 'de', 'shi', 'guang', 'zhou', 'de', 'xu', 'hao', 'liu', 'e', 'er', 'ling']\n",
+      "预测: ['zhai', 'ye', 'yi', 'kan', 'xiang', 'qi', 'de', 'shi', 'guang', 'zhou', 'de', 'xu', 'hao', 'li', 'e', 'er', 'ling']\n",
       "\n",
       "参考: ['ci', 'qian', 'qing', 'hua', 'zi', 'guang', 'jiu', 'ceng', 'zao', 'yu', 'guo', 'tong', 'yang', 'de', 'wei', 'ji']\n",
-      "预测: ['ci', 'qian', 'qing', 'hua', 'zi', 'guang', 'jiu', 'cun', 'zao', 'yu', 'guo', 'tong', 'yao', 'de', 'wei', 'ji']\n",
+      "预测: ['ci', 'qian', 'xing', 'hua', 'zi', 'guang', 'jiu', 'cun', 'zao', 'yu', 'guo', 'tong', 'yang', 'de', 'wei', 'ji']\n",
       "\n",
       "参考: ['bu', 'tai', 'ming', 'bai', 'shen', 'me', 'yi', 'si']\n",
-      "预测: ['bu', 'tai', 'ming', 'bai', 'shen', 'men', 'yi', 'si']\n",
+      "预测: ['bu', 'tai', 'ming', 'bai', 'shen', 'me', 'yi', 'si']\n",
       "\n",
-      "最终CER: 0.1060\n"
+      "最终CER: 0.0491\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
