--- a/3_v2.ipynb
+++ b/3_v2.ipynb
@@ -409,7 +409,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "评估中: 100%|██████████| 32/32 [00:03<00:00,  9.55it/s]"
+      "评估中: 100%|██████████| 32/32 [00:04<00:00,  6.51it/s]\n"
      ]
     },
     {
@@ -417,33 +417,26 @@
      "output_type": "stream",
      "text": [
       "评估结果:\n",
-      "替换(S): 800, 删除(D): 16, 插入(I): 130, 参考长度(N): 19252\n",
-      "CER: 0.0491 (946/19252)\n",
+      "替换(S): 825, 删除(D): 46, 插入(I): 85, 参考长度(N): 19252\n",
+      "CER: 0.0497 (956/19252)\n",
       "\n",
       "样本对比:\n",
       "参考: ['yi', 'ge', 'nan', 'ren', 'tui', 'ran', 'de', 'zuo', 'zai', 'pang', 'bian', 'mu', 'guang', 'dai', 'zhi']\n",
-      "预测: ['yi', 'gen', 'nan', 'ren', 'tui', 'ran', 'de', 'zuo', 'zai', 'pang', 'bian', 'mu', 'guan', 'dai', 'zhi']\n",
+      "预测: ['yi', 'gen', 'nai', 'ren', 'tui', 'ran', 'de', 'zuo', 'zai', 'pang', 'bian', 'mu', 'guan', 'dai', 'zhi']\n",
       "\n",
       "参考: ['xi', 'huan', 'ba', 'li', 'ao', 'de', 'shu', 'cha', 'zai', 'niu', 'zai', 'ku', 'de', 'qian', 'mian']\n",
       "预测: ['xi', 'huan', 'ba', 'li', 'ao', 'de', 'shu', 'cha', 'zai', 'niu', 'zai', 'ku', 'de', 'qian', 'mian']\n",
       "\n",
       "参考: ['zha', 'yan', 'yi', 'kan', 'xiang', 'qi', 'de', 'shi', 'guang', 'zhou', 'de', 'qu', 'hao', 'ling', 'e', 'er', 'ling']\n",
-      "预测: ['zhai', 'ye', 'yi', 'kan', 'xiang', 'qi', 'de', 'shi', 'guang', 'zhou', 'de', 'xu', 'hao', 'li', 'e', 'er', 'ling']\n",
+      "预测: ['zhe', 'ye', 'yi', 'kan', 'xiang', 'qi', 'de', 'shi', 'guang', 'zhou', 'de', 'xu', 'hao', 'liu', 'e', 'er', 'ling']\n",
       "\n",
       "参考: ['ci', 'qian', 'qing', 'hua', 'zi', 'guang', 'jiu', 'ceng', 'zao', 'yu', 'guo', 'tong', 'yang', 'de', 'wei', 'ji']\n",
-      "预测: ['ci', 'qian', 'xing', 'hua', 'zi', 'guang', 'jiu', 'cun', 'zao', 'yu', 'guo', 'tong', 'yang', 'de', 'wei', 'ji']\n",
+      "预测: ['ci', 'qian', 'qing', 'hua', 'zi', 'guang', 'jiu', 'ceng', 'zao', 'yu', 'guo', 'tong', 'yang', 'de', 'wei', 'ji']\n",
       "\n",
       "参考: ['bu', 'tai', 'ming', 'bai', 'shen', 'me', 'yi', 'si']\n",
-      "预测: ['bu', 'tai', 'ming', 'bai', 'shen', 'me', 'yi', 'si']\n",
+      "预测: ['bu', 'tai', 'ming', 'bai', 'shen', 'men', 'yin', 'si']\n",
       "\n",
-      "最终CER: 0.0491\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "最终CER: 0.0497\n"
      ]
     }
    ],
@@ -455,7 +448,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -473,5 +466,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
